[gd_scene load_steps=13 format=3 uid="uid://2pgp02r1nwul"]

[ext_resource type="Script" path="res://scripts/bosses/fourth_boss.gd" id="1_acnvu"]
[ext_resource type="Texture2D" uid="uid://jtiu6odbapyh" path="res://graphics/boss_4_base.png" id="2_mxiw4"]
[ext_resource type="Texture2D" uid="uid://c7s8ltcsuvger" path="res://graphics/boss_4_middle.png" id="3_2bue3"]
[ext_resource type="PackedScene" uid="uid://c0a2i7onvluxn" path="res://scenes/laser.tscn" id="3_es7om"]
[ext_resource type="Texture2D" uid="uid://bonunw1o2b4os" path="res://graphics/boss_4_turret.png" id="4_q5v1c"]
[ext_resource type="PackedScene" uid="uid://drd2m072phc4v" path="res://scenes/hitbox.tscn" id="5_6vcbs"]
[ext_resource type="Texture2D" uid="uid://cjnp8ixbls2cu" path="res://graphics/boss_4_turret_top.png" id="6_iagpj"]
[ext_resource type="PackedScene" uid="uid://cwshy400yx3qo" path="res://scenes/hurt_box.tscn" id="6_vlpwn"]
[ext_resource type="Texture2D" uid="uid://d3otih1xwa7g2" path="res://graphics/progress_bar.png" id="7_7rh2k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_48w8c"]
radius = 12.0416

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8mox"]
resource_local_to_scene = true
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xonui"]
resource_local_to_scene = true
size = Vector2(24, 24)

[node name="Fourthuardian" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 4
script = ExtResource("1_acnvu")
exp_value = 200
base_hp = 50
max_hp = 100
hp_per_level = 10
base_speed = 96
max_speed = 192
speed_per_level = 16
base_power = 3
max_power = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_48w8c")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Base" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.489854, 0.248342, 0.234223, 1)
texture_filter = 1
texture = ExtResource("2_mxiw4")

[node name="Lasers" type="Node2D" parent="Base"]

[node name="Laser" parent="Base/Lasers" instance=ExtResource("3_es7om")]
position = Vector2(20, 0)

[node name="Laser2" parent="Base/Lasers" instance=ExtResource("3_es7om")]
position = Vector2(0, 20)
rotation = 1.5708

[node name="Laser3" parent="Base/Lasers" instance=ExtResource("3_es7om")]
position = Vector2(-20, 0)
rotation = 3.14159

[node name="Laser4" parent="Base/Lasers" instance=ExtResource("3_es7om")]
position = Vector2(0, -20)
rotation = 4.71239

[node name="Middle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.0388404, 0.548404, 0.031644, 1)
texture = ExtResource("3_2bue3")

[node name="Turret" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.337812, 0.526588, 0.948227, 1)
texture = ExtResource("4_q5v1c")

[node name="Muzzle1" type="Marker2D" parent="Turret"]
position = Vector2(21, -4)

[node name="Muzzle2" type="Marker2D" parent="Turret"]
position = Vector2(21, 4)

[node name="MissileMuzzle1" type="Marker2D" parent="Turret"]
position = Vector2(16, -13)

[node name="MissileMuzzle2" type="Marker2D" parent="Turret"]
position = Vector2(16, 12)

[node name="Top" type="Sprite2D" parent="Turret"]
texture = ExtResource("6_iagpj")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." node_paths=PackedStringArray("target") instance=ExtResource("5_6vcbs")]
visible = false
collision_layer = 32
collision_mask = 512
target = NodePath("..")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_d8mox")

[node name="HurtBox" parent="." instance=ExtResource("6_vlpwn")]
collision_layer = 256
collision_mask = 0
monitoring = false
damage = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
shape = SubResource("RectangleShape2D_xonui")

[node name="HealthBarPivot" type="Marker2D" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="HealthBarPivot"]
visible = false
custom_minimum_size = Vector2(16, 4)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0
nine_patch_stretch = true
texture_progress = ExtResource("7_7rh2k")
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="charged" from="Base/Lasers/Laser" to="." method="_on_laser_charged"]
[connection signal="fired" from="Base/Lasers/Laser" to="." method="_on_laser_fired"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]

[editable path="Hitbox"]
[editable path="HurtBox"]
